Documenting all end points
